Overflow of logos of action items in Lexical Playground. #4095 fixed (padding changed in contenteditable)

--- a/packages/lexical-playground/src/index.css
+++ b/packages/lexical-playground/src/index.css
@@ -88,7 +88,6 @@ header h1 {
   position: relative;
   resize: vertical;
   z-index: -1;
-  padding-bottom: 50px;
 }
 
 .test-recorder-output {
