--- a/packages/lexical-playground/src/ui/ContentEditable.css
+++ b/packages/lexical-playground/src/ui/ContentEditable.css
@@ -14,6 +14,7 @@
   tab-size: 1;
   outline: 0;
   padding: 8px 28px;
+  padding-bottom: 45px;
   min-height: calc(100% - 16px);
 }
 @media (max-width: 1025px) {
